Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.6.0
-
None
Description
Nick Wolf reported that he was seeing too many open FDs when running Kudu. Upon further inspection, it was discovered that Kudu leaks WAL file descriptors when tablets are deleted (tombstoned). One immediate workaround is to restart the tablet server.
Ensure that we release the FDs held by the Log and its helper objects when a tablet is deleted.