KUDU-1288. Release WAL file descriptors when deleting tablets

This is a bug fix for an issue where we would leak WAL file FDs when
deleting tablets. Over time, this would cause Kudu to run out of file
descriptors and crash.

Change-Id: I97dfac521bcd61d2b286c9a437310f40cbe7b288
Reviewed-on: http://gerrit.cloudera.org:8080/1715
Reviewed-by: Todd Lipcon <todd@apache.org>
Tested-by: Kudu Jenkins